# dns_updater

./: .gitignore  Cargo.toml  README.md  config.json  current_dns.json
.github/workflows/: release.yml
src/: config.rs  log4rs.yml  main.rs  network.rs  request.json
