[package]
name = "dns_updater"
version = "0.1.0"
authors = ["VisualSource <boomishere_network@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "0.12.4"
reqwest = { version = "0.11.4", features = ["blocking", "json"] }
chrono = "0.4.19"