[package]
name = "dns_updater"
version = "0.3.2"
authors = ["VisualSource <boomishere_network@outlook.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
casual_logger = "0.6.5"
futures = "0.3.21"
tokio = { version = "1.19.2", features = ["full"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
reqwest = { version = "0.11.11", features = ["json"] }
chrono = "0.4.19"